# lemma

./: .gitignore  Cargo.toml  README.md
crates/lemma-cli/: Cargo.toml
crates/lemma-cli/src/: main.rs
crates/lemma-consensus/: Cargo.toml
crates/lemma-core/: Cargo.toml
crates/lemma-core/src/: address.rs  amount.rs  block.rs  epoch.rs  error.rs  genesis.rs  hash.rs  header.rs  lib.rs  signature.rs  transaction.rs  validator.rs  validator_set.rs
crates/lemma-core/src/address/: tests.rs
crates/lemma-core/src/amount/: tests.rs
crates/lemma-core/src/block/: tests.rs
crates/lemma-core/src/epoch/: tests.rs
crates/lemma-core/src/error/: tests.rs
crates/lemma-core/src/genesis/: tests.rs
crates/lemma-core/src/hash/: tests.rs
crates/lemma-core/src/header/: tests.rs
crates/lemma-core/src/signature/: tests.rs
crates/lemma-core/src/transaction/: tests.rs
crates/lemma-core/src/validator/: tests.rs
crates/lemma-core/src/validator_set/: tests.rs
crates/lemma-crypto/: Cargo.toml
crates/lemma-crypto/src/: error.rs  hashing.rs  keypair.rs  lib.rs  signing.rs
crates/lemma-crypto/src/error/: tests.rs
crates/lemma-crypto/src/hashing/: tests.rs
crates/lemma-crypto/src/keypair/: tests.rs
crates/lemma-crypto/src/signing/: tests.rs
crates/lemma-lang/: Cargo.toml
crates/lemma-mempool/: Cargo.toml
crates/lemma-network/: Cargo.toml
crates/lemma-node/: Cargo.toml
crates/lemma-privacy/: Cargo.toml
crates/lemma-rpc/: Cargo.toml
crates/lemma-storage/: Cargo.toml
crates/lemma-storage/src/: account.rs  db.rs  error.rs  lib.rs  snapshot.rs  state.rs
crates/lemma-storage/src/account/: tests.rs
crates/lemma-storage/src/db/: tests.rs
crates/lemma-storage/src/error/: tests.rs
crates/lemma-storage/src/snapshot/: tests.rs
crates/lemma-storage/src/state/: tests.rs
crates/lemma-storage/src/trie/: mod.rs  node.rs  proof.rs  trie.rs
crates/lemma-storage/src/trie/node/: tests.rs
crates/lemma-storage/src/trie/proof/: tests.rs
crates/lemma-storage/src/trie/trie/: tests.rs
crates/lemma-transpiler/: Cargo.toml
crates/lemma-vm/: Cargo.toml
