[workspace]
resolver = "2"
members = [
    "crates/lemma-core",
    "crates/lemma-crypto",
    "crates/lemma-storage",
    "crates/lemma-network",
    "crates/lemma-mempool",
    "crates/lemma-consensus",
    "crates/lemma-vm",
    "crates/lemma-lang",
    "crates/lemma-transpiler",
    "crates/lemma-privacy",
    "crates/lemma-rpc",
    "crates/lemma-node",
    "crates/lemma-cli",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Cryptography & encoding
blake3 = "1"
bech32 = "0.11"

# Utilities
bytes = "1"
hex = "0.4"
rand = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
