[workspace]
resolver = "2"
members = [
    "crates/lemma-core",
    "crates/lemma-crypto",
    "crates/lemma-storage",
    "crates/lemma-network",
    "crates/lemma-mempool",
    "crates/lemma-consensus",
    "crates/lemma-vm",
    "crates/lemma-lang",
    "crates/lemma-transpiler",
    "crates/lemma-privacy",
    "crates/lemma-rpc",
    "crates/lemma-node",
    "crates/lemma-cli",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Cryptography & encoding (versions audited 2026-05-30)
blake3 = "1.8"
bech32 = "0.11"
ed25519-dalek = { version = "2.2", features = ["serde", "rand_core"] }
pqcrypto-mldsa = "0.1"            # FIPS-204 ML-DSA (PQClean-backed; replaces stale pqcrypto-dilithium)
pqcrypto-traits = "0.3"          # shared traits for pqcrypto-mldsa
sha2 = "0.10"
subtle = "2"

# Utilities
bytes = "1"
hex = "0.4"
rand = "0.8.6"

# Storage
rocksdb = "0.24"

# Networking (0.56 is tokio-only — async-std removed)
libp2p = { version = "0.56", features = [
    "tokio", "tcp", "noise", "yamux", "gossipsub",
    "kad", "identify", "mdns", "ping",
] }

# VM (fuel metering, OSS-Fuzz, formal verification — chosen over wasmer for metered execution)
wasmtime = "45"

# ZK (Veil — BLS12-377 + decaf377, Penumbra stack).
# PINNED to arkworks 0.4.x to match Penumbra's audited circuits + trusted-setup
# parameters (reuse requires byte-identical circuits + matching crate versions).
# This is the ONE place Lemma intentionally pins below latest — circuit/param
# compatibility overrides currency. See 10-PRIVACY_SPEC.md §3.
ark-ec = { version = "=0.4.2", default-features = false }
ark-ff = { version = "=0.4.2", default-features = false }
ark-groth16 = { version = "=0.4.0", default-features = false }
ark-r1cs-std = { version = "=0.4.0", default-features = false }
ark-relations = "=0.4"
ark-serialize = "=0.4.2"
ark-snark = "=0.4.0"
ark-std = { version = "=0.4", default-features = false }
ark-bls12-377 = { version = "=0.4", default-features = false }
decaf377 = { version = "=0.10.1", default-features = false }
poseidon377 = "=1.2.0"
decaf377-rdsa = "=0.11.0"

# RPC
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tokio-tungstenite = "0.23"
async-graphql = "7"

# CLI
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
