[package]
name = "lemma-cli"
version = "0.1.0"
edition = "2021"
description = "Lemma CLI: wallet, compile, deploy, call, devnet, faucet"

[[bin]]
name = "lemma"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
lemma-core = { path = "../lemma-core" }
