[package]
name = "lemma-crypto"
version = "0.1.0"
edition = "2021"
description = "Cryptographic primitives for Lemma: Ed25519 + ML-DSA (Dilithium), Blake3, address derivation"

[dependencies]
lemma-core = { path = "../lemma-core" }
serde = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
pqcrypto-mldsa = { workspace = true }
pqcrypto-traits = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
