[package]
name = "lemma-crypto"
version = "0.1.0"
edition = "2021"
description = "Cryptographic primitives for Lemma: Ed25519 + ML-DSA (Dilithium), Blake3, address derivation"

[dependencies]
lemma-core = { path = "../lemma-core" }
serde = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
pqcrypto-mldsa = { workspace = true }
pqcrypto-traits = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
subtle = { workspace = true }  # constant-time key comparison in verify() (AGENTS.md §7.3)

[dev-dependencies]
hex        = { workspace = true }  # known test vectors
serde_json = { workspace = true }  # JSON round-trip tests
bincode    = { workspace = true }  # bincode round-trip tests (already in deps, explicit here for clarity)
subtle = { workspace = true }
