[package]
name = "lemma-storage"
version = "0.1.0"
edition = "2021"
description = "Persistent storage for Lemma: RocksDB wrapper, Merkle Patricia Trie, world state"

[dependencies]
rocksdb = { workspace = true }
lemma-core = { path = "../lemma-core" }
lemma-crypto = { path = "../lemma-crypto" }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
